Ability to send Whatsapp Invoices

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ requires-python = ">=3.10"
 readme = "README.md"
 dynamic = ["version"]
 
-dependencies = []
+dependencies = [
+    'pymupdf'
+]
 
 [build-system]
 requires = ["flit_core >=3.4,<4"]
